--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>HypeIdeaForm</title>
@@ -9,59 +10,88 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style type="text/css">
+    body,
+    html {
+      height: 100%;
+    }
+
+
+
+    .app-loading {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
+
+    .app-loading .spinner {
+      height: 60px;
+      width: 60px;
+      animation: rotate 1.5s linear infinite;
+      transform-origin: center center;
+      position: absolute;
+      top: 0;
+      bottom: 120px;
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+
+    .app-loading .spinner .path {
+      stroke-dasharray: 5;
+
+
+      animation: dash 1.5s ease-in-out infinite;
+      stroke-linecap:round;
+      stroke: #06c;
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes dash {
+      0% {
+        stroke-dasharray: 20, 200;
+        stroke-dashoffset: 0;
+      }
+
+      50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+      }
+
+      100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+      }
+    }
+
+  </style>
+
 
 
 </head>
+
 <body>
-    <app-root>
-        <style>
-        app-root {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
+  <app-root>
+    <!-- selector from app.component.ts -->
 
-          color: 06c;
-          text-transform: uppercase;
-          font-family: -apple-system,
-              BlinkMacSystemFont,
-              "Segoe UI",
-              Roboto,
-              Oxygen-Sans,
-              Ubuntu,
-              Cantarell,
-              Helvetica,
-              sans-serif;
-          font-size: 2.5em;
-          text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
-        }
-        body {
-          background: 06c;
-          margin: 0;
-          padding: 0;
-        }
+    <!-- loading layout replaced by app after startupp -->
+    <div class="app-loading">
+      <img class="logo" src="assets/img/cip/icon-cip-en.png" height="20px">
+      <div class="logo"></div>
+      <svg class="spinner" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="7" stroke-miterlimit="10" />
+      </svg>
+    </div>
 
-        @keyframes dots {
-          50% {
-            transform: translateY(-.4rem);
-          }
-          100% {
-            transform: translateY(0);
-          }
-        }
-
-        .d {
-          animation: dots 1.5s ease-out infinite;
-        }
-        .d-2 {
-          animation-delay: .5s;
-        }
-        .d-3 {
-          animation-delay: 1s;
-        }
-        </style>
-
-        Loading<span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
-      </app-root>
+  </app-root>
 </body>
+
 </html>
