feature: all components available

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 
 <body>
   <app-root>
-    <!-- selector from app.component.ts -->
+    <!-- field-chip-selector from app.component.ts -->
 
     <!-- loading layout replaced by app after startupp -->
     <div class="app-loading">
